// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useThing basic scenario 1`] = `
Array [
  Object {
    "canFetchMore": false,
    "data": null,
    "error": null,
    "fetchMore": [Function],
    "isError": false,
    "isInitial": true,
    "isLoading": false,
    "isRefetching": false,
    "mappedData": null,
    "preFetch": [Function],
    "refetch": [Function],
    "toType": [Function],
  },
  Object {
    "canFetchMore": false,
    "data": null,
    "error": null,
    "fetchMore": [Function],
    "isError": false,
    "isInitial": true,
    "isLoading": true,
    "isRefetching": false,
    "mappedData": null,
    "preFetch": [Function],
    "refetch": [Function],
    "toType": [Function],
  },
  Object {
    "canFetchMore": false,
    "data": "hello world",
    "error": null,
    "fetchMore": [Function],
    "isError": false,
    "isInitial": false,
    "isLoading": true,
    "isRefetching": false,
    "mappedData": "hello world",
    "preFetch": [Function],
    "refetch": [Function],
    "toType": [Function],
  },
  Object {
    "canFetchMore": false,
    "data": "hello world",
    "error": null,
    "fetchMore": [Function],
    "isError": false,
    "isInitial": false,
    "isLoading": false,
    "isRefetching": false,
    "mappedData": "hello world",
    "preFetch": [Function],
    "refetch": [Function],
    "toType": [Function],
  },
]
`;

exports[`useThing refetch feature 1`] = `
Array [
  Object {
    "canFetchMore": false,
    "data": null,
    "error": null,
    "fetchMore": [Function],
    "isError": false,
    "isInitial": true,
    "isLoading": false,
    "isRefetching": false,
    "mappedData": null,
    "preFetch": [Function],
    "refetch": [Function],
    "toType": [Function],
  },
  Object {
    "canFetchMore": false,
    "data": null,
    "error": null,
    "fetchMore": [Function],
    "isError": false,
    "isInitial": true,
    "isLoading": true,
    "isRefetching": false,
    "mappedData": null,
    "preFetch": [Function],
    "refetch": [Function],
    "toType": [Function],
  },
  Object {
    "canFetchMore": false,
    "data": "hello world",
    "error": null,
    "fetchMore": [Function],
    "isError": false,
    "isInitial": false,
    "isLoading": true,
    "isRefetching": false,
    "mappedData": "hello world",
    "preFetch": [Function],
    "refetch": [Function],
    "toType": [Function],
  },
  Object {
    "canFetchMore": false,
    "data": "hello world",
    "error": null,
    "fetchMore": [Function],
    "isError": false,
    "isInitial": false,
    "isLoading": false,
    "isRefetching": false,
    "mappedData": "hello world",
    "preFetch": [Function],
    "refetch": [Function],
    "toType": [Function],
  },
  Object {
    "canFetchMore": false,
    "data": "hello world",
    "error": null,
    "fetchMore": [Function],
    "isError": false,
    "isInitial": false,
    "isLoading": true,
    "isRefetching": true,
    "mappedData": "hello world",
    "preFetch": [Function],
    "refetch": [Function],
    "toType": [Function],
  },
  Object {
    "canFetchMore": false,
    "data": "hello world",
    "error": null,
    "fetchMore": [Function],
    "isError": false,
    "isInitial": false,
    "isLoading": false,
    "isRefetching": false,
    "mappedData": "hello world",
    "preFetch": [Function],
    "refetch": [Function],
    "toType": [Function],
  },
]
`;
